--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "android": "expo start --android --offline",
     "ios": "expo start --ios",
     "eject": "expo eject",
-    "test": "node ./node_modules/jest/bin/jest.js --watchAll"
+    "test": "node_modules/.bin/jest",
+    "test:debug": "node --inspect-brk node_modules/jest/bin/jest.js --runInBand"
   },
   "jest": {
     "preset": "jest-expo"
@@ -13,7 +14,6 @@
   "dependencies": {
     "@expo/samples": "2.1.1",
     "@expo/vector-icons": "^10.0.2",
-    "@react-native-community/async-storage": "^1.5.0",
     "crypto-js": "^3.1.9-1",
     "expo": "^33.0.0",
     "expo-asset": "^5.0.1",
@@ -37,7 +37,8 @@
   },
   "devDependencies": {
     "babel-preset-expo": "^5.2.0",
-    "jest-expo": "^33.0.1"
+    "jest-expo": "^33.0.2",
+    "react-test-renderer": "^16.8.6"
   },
   "private": true
 }
