--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-document-picker": "^5.0.2",
     "expo-file-system": "^5.0.1",
     "expo-font": "^5.0.1",
+    "lodash": "^4.17.15",
     "react": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-animatable": "^1.3.2",
