--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@expo/samples": "2.1.1",
     "@expo/vector-icons": "^10.0.2",
+    "@react-native-community/masked-view": "^0.1.6",
+    "@react-navigation/native": "^5.0.0-alpha.35",
     "crypto-js": "^3.1.9-1",
     "expo": "^33.0.0",
     "expo-asset": "^5.0.1",
@@ -26,6 +28,10 @@
     "react-native-animatable": "^1.3.2",
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^1.1.0",
+    "react-native-gesture-handler": "~1.2.1",
+    "react-native-reanimated": "1.0.1",
+    "react-native-safe-area-context": "^0.6.4",
+    "react-native-screens": "1.0.0-alpha.22",
     "react-native-svg-charts": "^5.2.0",
     "react-native-vector-icons": "^6.5.0",
     "react-navigation": "^3.11.0",
