--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start --localhost --android --offline",
-    "android": "expo start --android --offline",
+    "start": "expo start -c --localhost --android --offline",
+    "android": "expo start -c --android --offline",
     "ios": "expo start --ios",
     "eject": "expo eject",
     "test": "node_modules/.bin/jest",
@@ -13,39 +13,44 @@
   },
   "dependencies": {
     "@expo/samples": "2.1.1",
-    "@expo/vector-icons": "^10.0.2",
-    "@react-native-community/masked-view": "^0.1.6",
-    "@react-navigation/native": "^5.0.0-alpha.35",
-    "crypto-js": "^3.1.9-1",
-    "expo": "^33.0.0",
-    "expo-asset": "^5.0.1",
-    "expo-document-picker": "^5.0.2",
-    "expo-file-system": "^5.0.1",
-    "expo-font": "^5.0.1",
+    "@expo/vector-icons": "^10.0.6",
+    "@react-native-community/datetimepicker": "^2.1.0",
+    "@react-native-community/masked-view": "0.1.5",
+    "@react-navigation/bottom-tabs": "^5.0.0",
+    "@react-navigation/drawer": "^5.0.0",
+    "@react-navigation/native": "^5.0.0",
+    "@react-navigation/stack": "^5.0.0",
+    "crypto-js": "^3.3.0",
+    "expo": "^36.0.0",
+    "expo-asset": "~8.0.0",
+    "expo-document-picker": "~8.0.0",
+    "expo-file-system": "~8.0.0",
+    "expo-font": "~8.0.0",
+    "expo-secure-store": "~8.0.0",
+    "expo-sharing": "~8.0.0",
     "lodash": "^4.17.15",
-    "react": "16.8.3",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
-    "react-native-animatable": "^1.3.2",
+    "react": "16.9.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
+    "react-native-animatable": "^1.3.3",
     "react-native-datepicker": "^1.7.2",
-    "react-native-elements": "^1.1.0",
-    "react-native-gesture-handler": "~1.2.1",
-    "react-native-reanimated": "1.0.1",
-    "react-native-safe-area-context": "^0.6.4",
-    "react-native-screens": "1.0.0-alpha.22",
-    "react-native-svg-charts": "^5.2.0",
-    "react-native-vector-icons": "^6.5.0",
-    "react-navigation": "^3.11.0",
-    "react-navigation-tabs": "^2.2.0",
+    "react-native-elements": "^1.2.7",
+    "react-native-gesture-handler": "~1.5.0",
+    "react-native-reanimated": "~1.4.0",
+    "react-native-safe-area-context": "0.6.0",
+    "react-native-screens": "2.0.0-alpha.12",
+    "react-native-svg-charts": "^5.3.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-redux": "^6.0.1",
-    "redux": "^4.0.1",
+    "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.2.0",
-    "jest-expo": "^33.0.2",
-    "react-test-renderer": "^16.8.6"
+    "@babel/core": "^7.0.0",
+    "babel-preset-expo": "~8.0.0",
+    "jest-expo": "^36.0.0",
+    "react-test-renderer": "^16.12.0"
   },
   "private": true
 }
