--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "expo-document-picker": "~8.0.0",
     "expo-file-system": "~8.0.0",
     "expo-font": "~8.0.0",
+    "expo-image-picker": "~8.0.1",
     "expo-localization": "~8.0.0",
     "expo-secure-store": "~8.0.0",
     "expo-sharing": "~8.0.0",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.19",
     "react": "16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
     "react-native-animatable": "^1.3.3",
