--- a/package.json
+++ b/package.json
@@ -13,39 +13,41 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/react-native-action-sheet": "^3.8.0",
     "@expo/samples": "2.1.1",
-    "@expo/vector-icons": "^10.0.6",
-    "@react-native-community/datetimepicker": "^2.1.0",
-    "@react-native-community/masked-view": "0.1.5",
+    "@expo/vector-icons": "^10.0.0",
+    "@react-native-community/datetimepicker": "3.0.0",
+    "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.0.0",
     "@react-navigation/drawer": "^5.0.0",
     "@react-navigation/native": "^5.0.0",
     "@react-navigation/stack": "^5.0.0",
     "@types/crypto-js": "^3.1.47",
     "@types/moment": "^2.13.0",
-    "@types/react": "^16.9.46",
+    "@types/react": "~16.9.35",
     "@types/react-dom": "^16.9.8",
-    "@types/react-native": "^0.63.8",
+    "@types/react-native": "~0.63.2",
     "crypto-js": "^3.3.0",
-    "expo": "^36.0.0",
-    "expo-asset": "~8.0.0",
-    "expo-document-picker": "~8.0.0",
-    "expo-file-system": "~8.0.0",
-    "expo-font": "~8.0.0",
-    "expo-image-picker": "~8.0.1",
-    "expo-localization": "~8.0.0",
-    "expo-secure-store": "~8.0.0",
-    "expo-sharing": "~8.0.0",
+    "expo": "^39.0.0",
+    "expo-asset": "~8.2.0",
+    "expo-document-picker": "~8.4.0",
+    "expo-file-system": "~9.2.0",
+    "expo-font": "~8.3.0",
+    "expo-image-picker": "~9.1.0",
+    "expo-localization": "~9.0.0",
+    "expo-secure-store": "~9.2.0",
+    "expo-sharing": "~8.4.1",
     "lodash": "^4.17.19",
-    "react": "16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
+    "react": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
     "react-native-animatable": "^1.3.3",
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^1.2.7",
-    "react-native-gesture-handler": "~1.5.0",
-    "react-native-reanimated": "~1.4.0",
-    "react-native-safe-area-context": "0.6.0",
-    "react-native-screens": "2.0.0-alpha.12",
+    "react-native-gesture-handler": "~1.7.0",
+    "react-native-get-random-values": "^1.5.0",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.4",
+    "react-native-screens": "~2.10.1",
     "react-native-svg-charts": "^5.3.0",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^6.0.1",
@@ -53,18 +55,20 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
-    "typescript": "^4.0.2"
+    "typescript": "~3.9.2",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@types/jest": "^26.0.15",
     "@types/react-redux": "^7.1.9",
     "@types/react-test-renderer": "^16.9.3",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
-    "babel-preset-expo": "~8.0.0",
+    "babel-preset-expo": "^8.3.0",
     "eslint": "^7.11.0",
-    "jest-expo": "^36.0.0",
+    "jest-expo": "^39.0.0",
     "react-test-renderer": "^16.12.0"
   },
   "private": true
