--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/native": "^5.0.0",
     "@react-navigation/stack": "^5.0.0",
     "@types/crypto-js": "^3.1.47",
+    "@types/lodash": "^4.14.165",
     "@types/moment": "^2.13.0",
     "@types/react": "~16.9.35",
     "@types/react-dom": "^16.9.8",
