--- a/app.json
+++ b/app.json
@@ -25,11 +25,13 @@
     "ios": {
       "icon": "./src/assets/images/icon-ios.png",
       "supportsTablet": true,
-      "bundleIdentifier": "com.letsbewell.bewellapp"
+      "bundleIdentifier": "com.letsbewell.bewellapp",
+      "buildNumber": "1.0.0"
     },
     "android": {
       "icon": "./src/assets/images/icon-android.png",
-      "package": "com.letsbewell.bewellapp"
+      "package": "com.letsbewell.bewellapp",
+      "versionCode": "1.0.0"
     }
   }
 }
