--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
     "typescript": "~3.9.2",
-    "uuid": "^8.3.1"
+    "uuid": "^8.3.1",
+    "expo-updates": "~0.3.3",
+    "expo-network": "~2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
