--- a/package.json
+++ b/package.json
@@ -36,8 +36,11 @@
     "expo-font": "~8.3.0",
     "expo-image-picker": "~9.1.0",
     "expo-localization": "~9.0.0",
+    "expo-network": "~2.3.0",
     "expo-secure-store": "~9.2.0",
     "expo-sharing": "~8.4.1",
+    "expo-updates": "~0.3.3",
+    "jszip": "^3.5.0",
     "lodash": "^4.17.19",
     "react": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
@@ -56,10 +59,9 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
+    "stream": "0.0.2",
     "typescript": "~3.9.2",
-    "uuid": "^8.3.1",
-    "expo-updates": "~0.3.3",
-    "expo-network": "~2.3.0"
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
