--- a/app.json
+++ b/app.json
@@ -36,7 +36,11 @@
       "icon": "./src/assets/images/icon-android.png",
       "package": "com.letsbewell.bewellapp",
       "versionCode": 1,
-      "permissions" : ["MEDIA_LIBRARY"]
+      "permissions": [
+        "READ_EXTERNAL_STORAGE", 
+        "WRITE_EXTERNAL_STORAGE",
+        "CAMERA"
+      ]
     }
   }
 }
