--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-native-screens": "~2.10.1",
     "react-native-svg-charts": "^5.3.0",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-wheel-scrollview-picker": "^1.0.1",
     "react-redux": "^6.0.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
