update: enabled Jest code coverage

--- a/package.json
+++ b/package.json
@@ -10,7 +10,15 @@
     "lint": "npx eslint \"src/**/*.ts*\""
   },
   "jest": {
-    "preset": "jest-expo"
+    "preset": "jest-expo",
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "**/*.{js,jsx,ts,tsx}",
+      "!**/coverage/**",
+      "!**/node_modules/**",
+      "!**/babel.config.js",
+      "!**/jest.setup.js"
+    ]
   },
   "dependencies": {
     "@expo/react-native-action-sheet": "^3.8.0",
